objects/Merged_Record_History__c.object
<CustomObject>
    <fields>
        <fullName>Master_Record_Id__c</fullName>
        <label>Master Record Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merged_Record_Id__c</fullName>
        <label>Merged Record Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merged_Record_JSON__c</fullName>
        <label>Merged Record JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Merged Record History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Merged Record History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merged Record Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>